@@ -203,6 +203,7 @@ enum e_func {
 enum e_optcode {
    OPT_ADDRESS_FAMILY = 1,
    OPT_AI_ADDRCONFIG, 	/* getaddrinfo() */
+   OPT_AI_PASSIVE, 	/* getaddrinfo() */
    /* these are not alphabetically, I know... */
    OPT_B0,		/* termios.c_cflag */
    OPT_B50,		/* termios.c_cflag */
